記事の削除の追加

--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -4,6 +4,6 @@
     <h2>記事</h2>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-primary">更新</button>
+        <button type="submit" class="save btn btn-primary">保存</button>
     </form>
 {% endblock %}
